# AGENTIC-RAG

./: .gitignore  pyproject.toml  requirements.txt
data/json/: input.json
data/processed/tables/: table_metadata.json
src/agentic_rag_system/common/: __init__.py
src/agentic_rag_system/llm_adapters/embeddings/: __init__.py  base.py
src/agentic_rag_system/llm_adapters/llm/: base.py
src/agentic_rag_system/utilities/: fetch_table.py
