[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agentic RAG System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langchain-opendataloader-pdf>=2.0.0",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.1.6",
    "opendataloader-pdf>=2.2.1",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.2",
]


[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
